Fix button alignment, hide image on size lower than 992px ie. less than col-lg

--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,10 @@ ol {
 	font-size: 1.2em;
 }
 
+.header-buttons {
+	text-align: center;
+}
+
 /*---------------------
 	Hero section
 -----------------------*/
@@ -492,6 +496,10 @@ ol {
 
 /* Tablet :768px. */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+	.hero-image {
+		visibility: hidden;
+		display: none;
+	}
 	.portfolio-warp {
 		padding: 0;
 	}
@@ -524,9 +532,9 @@ ol {
 
 /* Large Mobile :480px. */
 @media only screen and (max-width: 767px) {
-	.icon-box {
-		margin-right: 30px;
-		text-align: left;
+	.hero-image {
+		visibility: hidden;
+		display: none;
 	}
 	.hero-text h2 {
 		font-size: 80px;
@@ -571,6 +579,10 @@ ol {
 
 /* small Mobile :320px. */
 @media only screen and (max-width: 479px) {
+	.hero-image {
+		visibility: hidden;
+		display: none;
+	}
 	.hero-text h2 {
 		font-size: 50px;
 	}
